# mais-edu-teste

./: .gitignore  README.md  compose.yaml  custos.md  estimated-infra-costs.md  fluxo-docs.md
.qlty/: qlty.toml
services/back-end/: Dockerfile  README.md  api.md  initial.md  institution-profile.md  llm-contract.md  pyproject.toml  run_local.py  tables.md
services/back-end/models/: README.md
services/back-end/src/app/: __init__.py  main.py
services/back-end/src/app/bootstrap/: container.py  observability.py  settings.py
services/back-end/src/app/delivery/: __init__.py
services/back-end/src/app/delivery/http/: assistant_catalog_handler.py  chat_handler.py  conversation_analysis_handler.py  conversation_export_handler.py  evaluation_handler.py  indexing_handler.py  metrics_handler.py  prompt_registry_handler.py
services/back-end/src/app/delivery/schemas/: assistant_catalog_schemas.py  chat_schemas.py  conversation_export_schemas.py  evaluation_schemas.py  indexing_schemas.py  metrics_schemas.py  prompt_registry_schemas.py
services/back-end/src/app/domain_models/agent/: models.py
services/back-end/src/app/domain_models/chat/: __init__.py  export_models.py  models.py
services/back-end/src/app/domain_models/common/: __init__.py  contracts.py  exceptions.py  ids.py
services/back-end/tests/integration/: test_application_startup.py  test_assistant_catalog_routes.py  test_chat_live_proxy.py  test_chat_routes.py  test_prompt_registry_routes.py
services/back-end/tests/unit/: test_agent_prompt_service.py  test_app_settings.py  test_chat_audio_service.py  test_chunking_engine.py  test_conversation_analysis_prompt_engine.py  test_conversation_export_engine.py  test_conversation_export_service.py  test_course_catalog_bootstrap_service.py  test_course_catalog_document_source.py  test_course_catalog_knowledge_bootstrap_service.py  test_course_markdown_parser.py  test_langgraph_course_agent.py  test_langgraph_state_payload_adapter.py  test_llm_proxy_gateway_client.py  test_markdown_institution_profile_source.py  test_masa_architecture_rules.py  test_minio_conversation_export_store.py  test_minio_conversation_reader.py  test_onnx_whisper_audio_transcriber.py  test_prompt_assembly_engine.py  test_prompt_engine.py  test_prompt_registry_service.py  test_rag_service.py  test_session_evaluation_engine.py  test_sqlalchemy_course_catalog_repository.py  test_sqlalchemy_knowledge_repository.py  test_sqlalchemy_prompt_registry_repository.py  test_sqlalchemy_session_repository.py
(+137 files in other folders)
