[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mais-a-educ-backend"
version = "0.1.0"
description = "Mais A Educ MVP."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "gdown>=5.2,<6.0",
  "httpx>=0.28,<1.0",
  "langgraph>=0.6,<1.0",
  "onnxruntime>=1.22,<2.0",
  "pydantic>=2.11,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "prometheus-client>=0.23,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "structlog>=25.4,<26.0",
  "transformers>=4.57,<5.0",
  "uvicorn>=0.34,<1.0",
  "pytest>=8.4.2",
  "minio>=7.2.20",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.10,<8.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=7.0,<8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: marks tests that exercise external or multi-component integrations",
]
